2010.03.10: David Nichols
	 * implemented new APIs for executing user method variants from
	   external modules, particularly when re-implementing pure virtual
	   c++ functions in Qore (as with the qt4 module)

2010.03.09: David Nichols
	 * updated getWord32() for hard typing, added the following functions
	   supporting only hard types (with string and binary arguments for
	   the data pointer):
	   - get_byte()
	   - get_word_16()
	   - get_word_32()
	   - get_word_64()
	 * fixed transactional participation in setting the empty public
	   member list flag
	 * updated variant matching to check class hierarchy when matching
	   method variants

2010.03.08: David Nichols
	 * implemented support for empty public member declarations in a class
	   (i.e.:  public {}) to mean all members are private
	 * added new API for checking type compatibility with classes in
	   externally-implemented types

2010.03.05: David Nichols
	 * fixed a bug with the new overloaded abs() function

2010.03.04: David Nichols
	 * implemented support for calling operators that modify lvalues on
	   lvalues with declared types that have not been assigned yet to be
	   automatically assigned with the default empty value and then apply
	   the operator
	 * fixed a bug saving type information for class members when the
	   types could be resolved immediately at parse time
	 * fixed a bug where type info was not being passed back internally at
	   runtime for object members
	 * fixed a bug where type info was not respected when converting an
	   lvalue to a hash as part of an lvalue expression
	 * fixed reference typeinfo so that references in user code can be
	   assigned any type

2010.03.03: David Nichols
	 * eliminated string parsing in block comments, fixed a bug where the
	   parser was not terminated at EOF in a block comment
	 * implemented support for initializing untyped members in class
	   declarations

2010.03.02: David Nichols