@@ -2,6 +2,8 @@
 	 * implemented new APIs for executing user method variants from
 	   external modules, particularly when re-implementing pure virtual
 	   c++ functions in Qore (as with the qt4 module)
+	 * fixed calling builtin method variants when a user variant overloads
+	   the method in a subclass
 
 2010.03.09: David Nichols
 	 * updated getWord32() for hard typing, added the following functions
